fix: mudando amarelo para manter bom contraste

--- a/src/assets/styles/_colors.scss
+++ b/src/assets/styles/_colors.scss
@@ -3,7 +3,7 @@ $dark2: #09090A;
 
 $green: #06af52;
 $red: #ce4a4a;
-$yellow: #ffcd1e;
+$yellow: #9E7C00;
 $gray: #a8a8b3;
 $light-gray: #e1e1e9;
 $purple: #8257E5;
